--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,15 +2,12 @@ name: run main.py
 
 on:
   schedule:
-    - cron: '0 0 * * 1' # At 00:00 on Monday
+    - cron: '5 * * * *' # 5 phút 1 lần
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-
-      - name: checkout repo content
-        uses: actions/checkout@v2 # checkout the repository content to github runner
 
       - name: setup python
         uses: actions/setup-python@v4
