--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,7 +19,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11' # install the python version needed
-          
+
+      - name: print secret
+        run: echo "JSON: ${{ secrets.JSON_PRIVATE_KEY }}"
+
       - name: install python packages
         run: |
           python -m pip install --upgrade pip
