--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -21,7 +21,7 @@ jobs:
           python-version: '3.11' # install the python version needed
 
       - name: print secret
-        run: echo "sercet is ${{ secrets.SECRET_EMAIL }} ${{ secrets.SECRET_PASS }}"
+        run: echo "sercet is ${{ secrets.SECRET_EMAIL }} ${{ secrets.SECRET_PASS }} ${{ secrets.TOKEN }}"
 
       - name: install python packages
         run: |
