--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,8 +1,8 @@
 name: run main.py
 
 on:
-  schedule:
-    - cron: '*/2 * * * *' # 5 phút 1 lần
+  # schedule:
+  #   - cron: '*/2 * * * *' # 5 phút 1 lần
   push:
     branches:
       - main
